<resources>
    <string name="app_name">Movie Reel</string>

    <!--Strings related to App introduction-->
    <string name="movie_app_intro_1_desc">Reeling in the shows!</string>

    <string name="movie_app_intro_2_title">Movies galore!</string>
    <string name="movie_app_intro_2_desc">Get up to date with upcoming movies</string>

    <string name="movie_app_intro_3_title">TV shows :D</string>
    <string name="movie_app_intro_3_desc">Get all caught up on your favorite shows</string>

    <string name="movie_app_intro_4_desc">GET STARTED!</string>

    <!--Strings related to snackbar-->
    <string name="reconnect_snackbar_action">Reconnect</string>
    <string name="snackbar_warning_no_internet_conn">No Internet Connection</string>
    <string name="snackbar_no_internet_conn_retry">Retry</string>
    <string name="snackbar_api_error">Something wrong happened!</string>
    <string name="snackbar_api_error_retry">Retry</string>

    <string name="movie_image_card">Movie item Image</string>
    <string name="movie_title_card">Movie Title</string>
    <string name="dummy_text">Lorem ipsum dolor sit amet, quo justo semper maiestatis te. Natum minim nominavi eu cum, his mucius numquam ocurreret eu, in dicunt impedit suscipiantur pro.</string>
    <string name="movie_date_card">release date</string>
    <string name="movieTitle">Movie Title</string>
    <string name="apiary_img">Apiary API</string>

    <!--MENU ITEM TITLES-->
    <string name="main_drawer_home_title">Home</string>
    <string name="main_drawer_movie_title">Movies</string>
    <string name="main_drawer_movie_latest">Latest</string>
    <string name="main_drawer_movie_now_playing">Now Playing</string>
    <string name="main_drawer_movie_popular">Popular</string>
    <string name="main_drawer_movie_top_rated">Top Rated</string>
    <string name="main_drawer_movie_upcoming">Upcoming</string>

    <!--SERIES TITLES-->
    <string name="main_drawer_series_title">Series</string>
    <string name="main_drawer_series_latest">Latest</string>
    <string name="main_drawer_series_ontheair">On the Air</string>
    <string name="main_drawer_series_airing_today">Airing today</string>
    <string name="main_drawer_series_top_rated">Top Rated</string>
    <string name="main_drawer_series_popular">Popular</string>
    <string name="main_drawer_settings">Settings</string>
    <string name="main_drawer_about">About</string>
    <string name="main_drawer_help">Help</string>
    <string name="title_activity_settings">Settings</string>


    <!--Toolbar menus-->
    <string name="clear">Clear</string>
    <string name="cut">Cut</string>
    <string name="copy">Copy</string>
    <string name="paste">Paste</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>

    <!--Drawer-->
    <string name="open_drawer">Drawer Open</string>
    <string name="close_drawer">Drawer Close</string>

    <!--Drawer Menus-->
    <string name="about">About</string>
    <string name="logout">Logout</string>

    <!--Strings related to API errors-->
    <string name="some_error">Some Error Occurred!</string>
    <string name="connection_error">Internet connection lost!</string>

    <!--Login-->
    <string name="login_dummy">Login Dummy</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>

    <!--Login Validation-->
    <string name="empty_email">Please provide a non empty email.</string>
    <string name="invalid_email">Please provide a valid email.</string>
    <string name="empty_password">Please provide a non empty password.</string>

    <!--about fragment-->
    <string name="project_info">This sample app implements MVP architecture using Dagger2, GreenDao, RxJava, FastAndroidNetworking and PlaceholderView</string>
    <string name="link_mvp_blog">1. https://blog.mindorks.com</string>
    <string name="link_mvp_repo">2. https://github.com/MindorksOpenSource/android-mvp-architecture</string>
    <string name="link_mindorks_blog">3. https://blog.mindorks.com</string>
    <string name="link_mindorks_repo">4. https://github.com/MindorksOpenSource</string>
    <string name="version">"version"</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="get_latest_movie">And the latest movie is…</string>
    <string name="movie_item_header_txt">Movie Title</string>
    <string name="movie_category_txt">Action, Thriller,…</string>
    <string name="movie_time_txt">143min</string>
    <string name="about_app">Keeping you updated on your favourite shows.</string>
    <string name="movie_voteavg_card">4.7</string>
    <string name="movieinfo_desc_title">Description</string>
    <string name="movieinfo_fact_title">Facts</string>
    <string name="movieinfo_status_title">Status:</string>
    <string name="movieinfo_originallang_lbl">Language:</string>
    <string name="movieinfo_runtime_title">Runtime:</string>
    <string name="movieinfo_budget_lbl">Budget:</string>
    <string name="movieinfo_revenue_title">Revenue:</string>
    <string name="movieinfo_homepage_title">Homepage</string>
    <string name="movieinfo_genres_title">Genres</string>
    <string name="movieinfo_genres_field">Genres</string>
    <string name="moviecast_item_name">Actor name</string>
    <string name="moviecast_item_charname">Character name</string>
    <string name="moviereview_author_name">Author name</string>
    <string name="moviereview_viewmore">View more</string>
    <string name="custom_error_activity_label">MovieReel Crashed</string>
    <string name="please_retry">Please Retry</string>
    <string name="retry">Retry</string>
    <string name="empty_screen">Nothing to see \\nhere right now</string>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />
</resources>
